Bug 390331 - Changing settings in Configure dialog resets thumbnail size
Summary: Changing settings in Configure dialog resets thumbnail size
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 17.12.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-12 17:19 UTC by null
Modified: 2018-02-18 21:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description null 2018-02-12 17:19:30 UTC
STR:
- In Browse mode, move zoom slider to the left (thumbnails get smaller).
- Settings → Configure, change arbitrary entry, OK.

ER: Only affected setting changed.

AR: Setting changed, but thumbnail size reset to old value too.

Note: With a "reset" it seems to go back to the value stored in the config, i.e. if you close Gwenview after moving the zoom slider and only then open the configure dialog, it would reset to that value. Seems like it's simply missing to store the zoom level to the config before opening the configure dialog (it probably shouldn't write to the config continuously while moving the slider).
Comment 1 Huon 2018-02-18 08:34:38 UTC
Confirmed. Working on a fix.
Comment 2 null 2018-02-18 09:38:18 UTC
Git commit ab1f4721e037d27c1e933e3e1fe9862799d17c6a by Henrik Fehlauer, on behalf of Huon Imberger.
Committed on 18/02/2018 at 09:38.
Pushed by rkflx into branch 'master'.

Save config when opening the config dialog

Summary:
Some settings can be changed outside of the config dialog. We don't
want these changes to be lost when changing the config, which
triggers reloading of the config.

Test Plan:
Settings changed outside the config dialog, e.g. thumbnail zoom level in Browse view,
should not reset if you change a setting in the config dialog.

Reviewers: #gwenview, rkflx

Reviewed By: #gwenview, rkflx

Differential Revision: https://phabricator.kde.org/D10626

M  +3    -0    app/mainwindow.cpp

https://commits.kde.org/gwenview/ab1f4721e037d27c1e933e3e1fe9862799d17c6a
Comment 3 null 2018-02-18 21:58:53 UTC
Git commit e913496b73e1e6e105ed30e2d8498b6d7932e73b by Henrik Fehlauer, on behalf of Huon Imberger.
Committed on 18/02/2018 at 21:52.
Pushed by rkflx into branch 'Applications/17.12'.

Save config when opening the config dialog

Summary:
Some settings can be changed outside of the config dialog. We don't
want these changes to be lost when changing the config, which
triggers reloading of the config.

Test Plan:
Settings changed outside the config dialog, e.g. thumbnail zoom level in Browse view,
should not reset if you change a setting in the config dialog.

Reviewers: #gwenview, rkflx

Reviewed By: #gwenview, rkflx

Differential Revision: https://phabricator.kde.org/D10626

M  +3    -0    app/mainwindow.cpp

https://commits.kde.org/gwenview/e913496b73e1e6e105ed30e2d8498b6d7932e73b